--- a/sre/package.json
+++ b/sre/package.json
@@ -2,13 +2,17 @@
   "name": "dummy-app",
   "version": "1.0.0",
   "description": "dummy app with health check",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "x": "npm x"
   },
   "author": "Diogo Nogueira",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
-  }
+    "express": "^4.19.2",
+    "express-prom-bundle": "^7.0.0",
+    "prom-client": "^15.1.3",
+    "winston": "3.13.1"
+  },
+  "type": "module"
 }
